ingress-alibaba.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: efood-dev
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: admins-svc
                port:
                  number: 3000
            path: /api/v1/admins/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: auth-svc
                port:
                  number: 3000
            path: /api/v1/auth/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: balances-svc
                port:
                  number: 3000
            path: /api/v1/balances/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: catalogs-svc
                port:
                  number: 3000
            path: /api/v1/internal/catalogs/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: catalogs-svc
                port:
                  number: 3000
            path: /api/v1/catalogs/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: customers-svc
                port:
                  number: 3000
            path: /api/v1/customers/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: deliveries-svc
                port:
                  number: 3000
            path: /api/v1/deliveries/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: loyalties-svc
                port:
                  number: 3000
            path: /api/v1/internal/loyalties/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: loyalties-svc
                port:
                  number: 3000
            path: /api/v1/loyalties/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: loyalties-svc
                port:
                  number: 3000
            path: /api/v1/internal/loyalties/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: merchants-svc
                port:
                  number: 3000
            path: /api/v1/merchants/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: merchants-svc
                port:
                  number: 3000
            path: /api/v1/internal/merchants/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: orders-svc
                port:
                  number: 3000
            path: /api/v1/orders/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: payments-svc
                port:
                  number: 3000
            path: /api/v1/payments/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: payments-svc
                port:
                  number: 3000
            path: /api/v1/internal/payments/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: reports-svc
                port:
                  number: 3000
            path: /api/v1/reports/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: reports-svc
                port:
                  number: 3000
            path: /api/v1/internal/reports/?(.*)
            pathType: Prefix
