ingress-eks-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: efood-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - api.efood.co.id
      secretName: mds-tls
  rules:
    - host: api.efood.co.id
      http:
        paths:
          - backend:
              service:
                name: admins-svc
                port:
                  number: 3000
            path: /api/v1/admins/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: auth-svc
                port:
                  number: 3000
            path: /api/v1/auth/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: balances-svc
                port:
                  number: 3000
            path: /api/v1/balances/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: catalogs-svc
                port:
                  number: 3000
            path: /api/v1/internal/catalogs/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: catalogs-svc
                port:
                  number: 3000
            path: /api/v1/catalogs/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: customers-svc
                port:
                  number: 3000
            path: /api/v1/customers/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: deliveries-svc
                port:
                  number: 3000
            path: /api/v1/deliveries/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: loyalties-svc
                port:
                  number: 3000
            path: /api/v1/internal/loyalties/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: loyalties-svc
                port:
                  number: 3000
            path: /api/v1/loyalties/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: loyalties-svc
                port:
                  number: 3000
            path: /api/v1/internal/loyalties/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: merchants-svc
                port:
                  number: 3000
            path: /api/v1/merchants/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: merchants-svc
                port:
                  number: 3000
            path: /api/v1/internal/merchants/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: orders-svc
                port:
                  number: 3000
            path: /api/v1/orders/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: payments-svc
                port:
                  number: 3000
            path: /api/v1/payments/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: payments-svc
                port:
                  number: 3000
            path: /api/v1/internal/payments/?(.*)
            pathType: Prefix
