ingress-eks-stg.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: efood-ingress
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - stg-api-efood.masihdistaging.in
      secretName: mds-tls
  rules:
    - host: stg-api-efood.masihdistaging.in
      http:
        paths:
          - backend:
              service:
                name: admins-svc
                port:
                  number: 3000
            path: /api/v1/admins/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: auth-svc
                port:
                  number: 3000
            path: /api/v1/auth/?(.*)
            pathType: Prefix
